<resources>
    <string name="app_name">LFF</string>

    //auth
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="tidak_punya_akun">Tidak Punya Akun ?</string>
    <string name="register">Registrasi</string>
    <string name="password">Password</string>
    <string name="retypepassword">Ulangi Password</string>
    <string name="text_login">Selamat Datang, Silahkan Login</string>
    <string name="logo">Logo</string>
    <string name="fullname">Nama Lengkap</string>
    <string name="sudah_punya_akun">Sudah Punya Akun ? Silahkan</string>
    <string name="login_sebagai">Login Sebagai</string>
    <string name="admin">Admin</string>
    <string name="guru">Guru</string>
    <string name="siswa">Siswa</string>

    // home siswa
    <string name="sayhello">"Selamat %s, %s"</string>
    <string name="pelajaran_mu">Pelajaran Mu</string>
    <string name="next">Soal Selanjutnya</string>
    <string name="submit">Submit</string>
    <string name="level">Level %d</string>
    <string name="totalLevel">/%d</string>
    <string name="done">Selesai</string>
    <string name="result">Hasil</string>
    <string name="result_congratulations">Hey, Selamat telah menyelesaikan %s!</string>
    <string name="result_score">Nilai kamu adalah %d dari total %d soal</string>
    <string name="time_zero">00:00</string>
    <string name="welcome_screen2">Selamat Belajar Hal Baru</string>
    <string name="nextToSoal">Ke Soal</string>
    <!--    <string name="chapter">Chapter %d</string>-->
    <string name="restart">Ulangi Chapter</string>
    <string name="resultNilai">Nilai kamu adalah %s dari total %s soal</string>
    <string name="log_out">Log Out</string>
    <string name="message_log_out">Apakah anda yakin ingin logout?</string>
    <string name="namaSiswa">Nama Siswa</string>
    <string name="nilai_siswa">Nilai Siswa</string>
    <string name="level_detail_siswa">%s | %s</string>
    <string name="intro_soal">Intro Soal</string>
    <string name="soal">Soal</string>
    <string name="choose_chapter">Pilih Chapter</string>
    <string name="pickvideo">Pilih Video</string>
    <string name="pickImage">Pilih Gambar</string>
    <string name="upload">Upload</string>
    <string name="upload_soal">Upload Soal</string>
    <string name="chapter">Chapter %d</string>
    <string name="pickSuara">Pilih Suara</string>
    <string name="opsi_a">Pernyataan Opsi A</string>
    <string name="opsi_b">Pernyataan Opsi B</string>
    <string name="opsi_c">Pernyataan Opsi C</string>
    <string name="opsi_d">Pernyataan Opsi D</string>
    <string name="kunci_jawaban">Kunci Jawaban</string>
    <string name="choose_a">A</string>
    <string name="choose_b">B</string>
    <string name="choose_c">C</string>
    <string name="choose_d">D</string>
    <string name="tambah_chapter">Tambah Chapter</string>
    <string name="nama_chapter">Nama Chapter</string>
    <string name="save">Simpan</string>
    <string name="delete">Delete</string>
    <string name="delete_chapter_title">Hapus Chapter</string>
    <string name="delete_soal_title">Hapus Soal</string>
    <string name="delete_siswa_title">Hapus Siswa</string>
    <string name="delete_chapter_body">Apakah anda yakin ingin menghapus chapter ini?</string>
    <string name="delete_mapel_body">Apakah anda yakin ingin menghapus mata pelajaran ini?</string>
    <string name="delete_soal_body">Apakah anda yakin ingin menghapus soal ini?</string>
    <string name="delete_siswa_body">Apakah anda yakin ingin menghapus siswa ini?</string>
    <string name="opsi_kunci_jawaban">Opsi Kunci Jawaban</string>
    <string name="image_siswa">Gambar Siswa</string>
    <string name="nameUser">Nama Lengkap</string>
    <string name="usernameUser">Username</string>
    <string name="passwordUser">Password</string>
    <string name="classroomUser">Kelas</string>
    <string name="titleName">Masukkan Nama Anda</string>
    <string name="pilihGambar">Pilih Gambar</string>
    <string name="cancelProfile">Batal</string>
    <string name="saveProfile">Simpan</string>
    <string name="titlePassword">Masukkan Password Anda</string>
    <string name="old_password">Password Lama</string>
    <string name="new_password">Password Baru</string>
    <string name="new_password_again">Ulangi Password Baru</string>
    <string name="dummy_password">12345</string>
    <string name="app_fullname">Learn For Fun</string>
    <string name="title_class">Masukkan Kelas Anda</string>
    <string name="title_mapel">Masukkan Mata Pelajaran Anda</string>
    <string name="mapel">Mata Pelajaran</string>
    <string name="upload_materi">Upload Materi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lihat_semua_siswa">Lihat Semua Siswa</string>
    <string name="siswa_di_kelas_saya">Siswa Di Kelas Saya</string>
    <string name="failed">Gagal ☹️</string>
    <string name="success">Sukses 😍</string>
    <string name="edit_profile_siswa">Edit Profile Siswa</string>
    <string name="nilai_rata_rata_siswa">Nilai Rata-Rata Siswa</string>
    <string name="data_siswa_tidak_ditemukan">Data Siswa Tidak Ditemukan</string>
    <string name="data_chapter_tidak_ditemukan">Data Chapter Tidak Ditemukan</string>
    <string name="upload_soal_video">Upload Soal Video</string>
    <string name="upload_soal_gambar">Upload Soal Gambar</string>
    <string name="copyright">Created by Vefaza</string>
    <string name="data_kelas_tidak_ditemukan">Data Kelas Tidak Ditemukan</string>
    <string name="lihat_kelas">Lihat Kelas</string>
    <string name="lihat_siswa">Lihat Siswa</string>
    <string name="tambah_mapel">Tambah Mata Pelajaran</string>
    <string name="data_mapel_tidak_ditemukan">Data Mata Pelajaran Tidak Ditemukan</string>
    <string name="nama_mapel">Nama Mata Pelajaran</string>
    <string name="delete_mapel_title">Hapus Mata Pelajaran</string>
    <string name="kelas">"Kelas %s"</string>
</resources>