<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheetEditKelasAndMapel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottomsheet_background"
    android:orientation="vertical"
    android:padding="32dp">

    <TextView
        android:id="@+id/titleInputKelas"
        style="@style/CustomTextViewRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_class"
        android:textColor="@color/black" />

    <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
        android:id="@+id/spinnerKelas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleInputKelas"
        android:layout_marginTop="18dp"
        android:spinnerMode="dropdown"
        app:smsp_hint="Kelas"
        app:smsp_hintColor="@color/black"
        app:smsp_hintSize="18sp" />

    <TextView
        android:id="@+id/titleInputMapel"
        style="@style/CustomTextViewRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerKelas"
        android:text="@string/title_mapel"
        android:textColor="@color/black" />

    <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
        android:id="@+id/spinnerMapel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleInputMapel"
        android:layout_marginTop="18dp"
        android:spinnerMode="dropdown"
        app:smsp_hint="Mata Pelajaran"
        app:smsp_hintColor="@color/black"
        app:smsp_hintSize="18sp" />

    <Button
        android:id="@+id/btnCancel"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerMapel"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="6dp"
        android:layout_toStartOf="@id/btnSave"
        android:text="@string/cancelProfile" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerMapel"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="28dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnSave"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerMapel"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="12dp"
        android:text="@string/saveProfile" />
</RelativeLayout>