<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".view.auth.ChooseLoginFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/princess_sofia"
        android:text="@string/app_fullname"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeMinTextSize="14sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/login_sebagai"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeMinTextSize="14sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="@id/textView2"
        app:layout_constraintStart_toStartOf="@id/textView2"
        app:layout_constraintTop_toBottomOf="@id/textView2" />

    <Button
        android:id="@+id/btnGuru"
        style="@style/CustomTextViewBoldButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:padding="18dp"
        android:text="@string/guru"
        android:textAllCaps="false"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeMinTextSize="14sp"
        app:autoSizeStepGranularity="2sp"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="@id/textView3"
        app:layout_constraintStart_toStartOf="@id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btnSiswa"
        style="@style/CustomTextViewBoldButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="18dp"
        android:text="@string/siswa"
        android:textAllCaps="false"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeMinTextSize="14sp"
        app:autoSizeStepGranularity="2sp"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="@id/btnGuru"
        app:layout_constraintStart_toStartOf="@id/btnGuru"
        app:layout_constraintTop_toBottomOf="@+id/btnGuru" />
</androidx.constraintlayout.widget.ConstraintLayout>