<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".view.auth.login.LoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:focusableInTouchMode="true"
        android:padding="16dp">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="18dp"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/splash_book" />

        <TextView
            android:id="@+id/welcomeText"
            style="@style/CustomTextViewBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image"
            android:gravity="center"
            android:text="@string/text_login"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcomeText"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvFailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:textColor="@android:color/holo_red_light"
                android:visibility="gone"
                tools:text="Email atau Password Yang Anda Masukkan Salah" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiUsername"
                style="@style/CustomTextField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="18dp"
                android:focusableInTouchMode="true"
                android:hint="@string/username"
                app:endIconMode="clear_text"
                app:startIconContentDescription="Username"
                app:startIconDrawable="@drawable/ic_person_24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtUsername"
                    style="@style/CustomEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiPassword"
                style="@style/CustomTextField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:startIconContentDescription="Password"
                app:startIconDrawable="@drawable/ic_lock_24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPassword"
                    style="@style/CustomEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLines="1"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnLogin"
                style="@style/CustomTextViewBoldButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:padding="12dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll"
            android:layout_centerHorizontal="true">

            <TextView
                style="@style/CustomTextViewParagraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tidak_punya_akun"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvRegister"
                style="@style/CustomTextViewParagraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />
    </RelativeLayout>
</ScrollView>